--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                             <a class="nav-link" asp-area="" asp-controller="Campos" asp-action="Index">Campos</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="TipoMuestra" asp-action="Index">Tipos de muestra</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#">About</a>
                         </li>
                         <li class="nav-item dropdown">
