--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <header>
@@ -46,7 +47,7 @@
                                 <a class="dropdown-item" asp-area="" asp-controller="Entidades" asp-action="Index">Listar</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Entidades" asp-action="Cargar">Cargar</a>
                                 <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
+                          
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Separated link</a>
                             </div>
@@ -56,9 +57,9 @@
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" asp-area="" asp-controller="Muestras" asp-action="Index">Listar</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Muestras" asp-action="Cargar">Cargar</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
                                 <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" asp-area="" asp-controller="Muestras" asp-action="GraficaPorCampoYTipoMuestra">Grafica</a>
+                        
                                 <a class="dropdown-item" href="#">Separated link</a>
                             </div>
                         </li>
