--- a/Views/Informes/CantidadMuestrasPorCampo.cshtml
+++ b/Views/Informes/CantidadMuestrasPorCampo.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Entidades.Models.ViewModels.CantidadMuestrasPorCampoVM
 
 @{
-    ViewData["Title"] = "Lista de entidades";
+    ViewData["Title"] = "Cantidad de muestras por campo";
 }
-<table>
+<table class="table table-striped table-bordered">
     <tr>
         <th>IdEntidad</th>
         <th>Cantidad</th>
