--- a/Views/Informes/ListaEntidades.cshtml
+++ b/Views/Informes/ListaEntidades.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Lista de entidades";
 }
-<table>
+<table class="table table-striped table-bordered">
     <tr>
         <th>Nombre</th>
         <th>Datos</th>
@@ -15,4 +15,4 @@
             <td>@item.Datos</td>
         </tr>
     }
-</table>
+</tabl>
