--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,6 +42,18 @@
                             <a class="nav-link" href="#">About</a>
                         </li>
                         <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Informes</a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" asp-area="" asp-controller="Informes" asp-action="ListaEntidades">ListaEntidades</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Informes" asp-action="CantidadMuestrasPorCampo">CantidadMuestrasPorCampo</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Informes" asp-action="GetMuestrasYValores">GetMuestrasYValores</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Separated link</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Entidades</a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" asp-area="" asp-controller="Entidades" asp-action="Index">Listar</a>
