--- a/Views/Entidades/Cargar.cshtml
+++ b/Views/Entidades/Cargar.cshtml
@@ -6,29 +6,28 @@
 
 <br />
 <h3 class="text-center">Cargar Entidades</h3>
-<form method="post" asp-action="Cargar" enctype="multipart/form-data">
-    <div class="row px-2 offset-1 border">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
+<div class="container mt-3">
+    <div class="row justify-content-center">
+        <div class="col-md-4">
+            <form method="post" asp-action="Cargar" enctype="multipart/form-data">
 
-        <div class="form-group row mt-2">
-            <div class="col-4">
-                <label>Archivo Entidades</label>
-            </div>
-            <div class="col-8">
-                <input type="file" name="file" id="subidaArchivo" class="form-control" />
-            </div>
-        </div>
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group mt-3">
+                    <label for="subidaArchivo">Archivo Entidades</label>
+                    <input type="file" name="file" id="subidaArchivo" class="form-control" />
+                    <button type="submit" class="btn btn-primary form-control">Crear</button>
+                </div>
 
-
-        <div class="form-group row mt-2">
-
-            <div class="col-8">
-                <partial name="_VistaCrearVolver" />
-            </div>
+            </form>
         </div>
     </div>
-
-
-</form>
+</div>
+<div class="container ">
+    <div class="row justify-content-center mt-3">
+        <div class="col-md-4">
+            <partial name="_VistaCrearVolver" />
+        </div>
+    </div>
+</div>
 
