--- a/Views/Informes/GetMuestrasYValores.cshtml
+++ b/Views/Informes/GetMuestrasYValores.cshtml
@@ -7,10 +7,11 @@
 @section Scripts{
     <script src="/js/muestrasSalidas.js">  </script>
 }
+
 <div class="row">
     <div class="container mt-3">
         <form class="row">
-
+            <h3>Muestras y valores</h3>
             <div class="col-3">
                 <label for="inputPassword2" class="visually-hidden">Password</label>
                 <select id="selectipoMuestra" class="form-select" aria-label="Default select example">
@@ -25,14 +26,22 @@
             <div class="col-3">
                 <button type="button" id="btnBuscar" class="btn btn-primary mb-3">Buscar</button>
             </div>
+            <div class="col-3 d-none" id="spinner">
+                <div class="spinner-border" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
         </form>
     </div>
 </div>
 
+   
 
 
 
-<h1>Muestas y valores</h1>
+
+
+
 <table id="muestras" class="table table-striped table-bordered">
 
 </table>
