--- a/Views/Informes/ListaEntidades.cshtml
+++ b/Views/Informes/ListaEntidades.cshtml
@@ -3,16 +3,25 @@
 @{
     ViewData["Title"] = "Lista de entidades";
 }
-<table class="table table-striped table-bordered">
-    <tr>
-        <th>Nombre</th>
-        <th>Datos</th>
-    </tr>
-@foreach (var item in @Model.ListaEntidades)
-    {
-        <tr>
-            <td>@item.Id</td>
-            <td>@item.Datos</td>
-        </tr>
-    }
-</tabl>
+
+<div class="row">
+    <div class="container mt-3">
+
+        <h3>Lista de entidades</h3>
+
+        <table class="table table-striped table-bordered">
+            <tr>
+                <th>Nombre</th>
+                <th>Datos</th>
+            </tr>
+        @foreach (var item in @Model.ListaEntidades)
+            {
+                <tr>
+                    <td>@item.Id</td>
+                    <td>@item.Datos</td>
+                </tr>
+            }
+        </table>
+
+    </div>
+</div>
