--- a/Views/Muestras/FormGraficaCampoYTipoMuestra.cshtml
+++ b/Views/Muestras/FormGraficaCampoYTipoMuestra.cshtml
@@ -1,1 +1,38 @@
-﻿
+﻿@model Entidades.Models.ViewModels.TipoMuestraCampoVM
+<h3 class="mt-3">Gráfica por campo y tipo de muestra</h3>
+<div class="container mt-3">
+    <div class="row justify-content-center">
+        <div class="col-md-4">
+            <form method="post" asp-action="GraficaPorCampoYTipoMuestra">
+                <div class="form-group mt-3">
+                    <label for="exampleInputPassword1">Campo de investigación</label>
+                    <select id="campo" class="form-select" aria-label="Campo" name="idCampo">
+                        <option value="0">Seleccione un campo</option>
+                        @foreach (var item in Model.Campos)
+                        {
+                            <option value="@item.Id">@item.Nombre</option>
+                        }
+
+                    </select>
+                </div>
+                <div class="form-group mt-3">
+                    <label for="tipoMuestra">Tipo de muestra</label>
+                    <select id="tipoMuestra" class="form-select" aria-label="Tipo de muestra" name="idTipoMuestra">
+                        <option value="0">Seleccione un tipo de muestra</option>
+                        @foreach (var item in Model.TiposMuestra)
+                        {
+                            <option value="@item.Id">@item.Nombre</option>
+                        }
+
+                    </select>
+
+                </div>
+                
+
+                <button type="submit" class="btn btn-primary mt-3">Submit</button>
+            </form>
+
+
+        </div>
+    </div>
+</div>
