--- a/Views/Muestras/GraficaPorCampoYTipoMuestra.cshtml
+++ b/Views/Muestras/GraficaPorCampoYTipoMuestra.cshtml
@@ -13,29 +13,38 @@
             </div>
         </div>
     </div>
-    <div class="row">
-    <div class="col-6">
-            
-            <div class="chart-container">
-                <canvas id="media-bar-chart" width="100" height="300"></canvas>
-            </div>
-        </div>
-    <div class="col-6">
-            
-            <div class="chart-container">
-                <canvas id="min-bar-chart" width="100" height="300"></canvas>
-            </div>
-
-    </div>
-    <div class="col-6">
-            
-            <div class="chart-container">
-                <canvas id="max-bar-chart" width="100" height="300"></canvas>
-            </div>
-    </div>
-
 </div>
+<div class="container ">
+    <div class="row mt-3">
+        <div class="col-6">
+            
+                <div class="chart-container">
+                    <canvas id="media-bar-chart" width="100" height="300"></canvas>
+                </div>
+            </div>
+        <div class="col-6">
+            
+                <div class="chart-container">
+                    <canvas id="min-bar-chart" width="100" height="300"></canvas>
+                </div>
 
+        </div>
+        <div class="col-6">
+            
+                <div class="chart-container">
+                    <canvas id="max-bar-chart" width="100" height="300"></canvas>
+                </div>
+        </div>
+
+    </div>
+</div>
+<div class="container ">
+    <div class="row justify-content-center mt-3">
+        <div class="col-md-4">
+             <a asp-action="FormGraficaCampoYTipoMuestra" class="btn btn-success form-control">Volver </a>
+        </div>
+    </div>
+</div>
 
 
 
