--- a/Views/TipoMuestra/Create.cshtml
+++ b/Views/TipoMuestra/Create.cshtml
@@ -8,26 +8,30 @@
 
 <br />
 <h3 class="text-center">Crear Tipo de muestra</h3>
-<form method="post" asp-action="Create">
-    <div class="row px-2 offset-1 border">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group row">
-            <div class="col-4">
-                <label asp-for="Nombre"></label>
-            </div>
-            <div class="col-8">
-                <input asp-for="Nombre" class="form-control" placeholder="Ingrese Tipo de muestra" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
-            </div>
-        </div>
 
-        <div class="form-group row">
-
-            <div class="col-8">
-                <partial name="_VistaCrearVolver" />
-            </div>
+<div class="container mt-3">
+    <div class="row justify-content-center">
+        <div class="col-md-4">
+            <form method="post" asp-action="Create">
+                <div class="form-group">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group ">
+                            <label asp-for="Nombre"></label>
+                            <input asp-for="Nombre" class="form-control" placeholder="Ingrese Tipo de muestra" />
+                            <span asp-validation-for="Nombre" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </form>
         </div>
     </div>
-
-
-</form>
+</div>
+<div class="container ">
+    <div class="row justify-content-center mt-3">
+        <div class="col-md-4">
+            <partial name="_VistaCrearVolver" />
+        </div>
+    </div>
+</div>
