fix cosas visuales

--- a/Views/Informes/CantidadMuestrasPorCampo.cshtml
+++ b/Views/Informes/CantidadMuestrasPorCampo.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="row">
     <div class="container mt-3">
-        <h3>Muestras por campo</h3>
+        <h2 class="text-primary">Muestras por campo y tipo de muestra</h2>
         <table class="table table-striped table-bordered">
             <tr>
                 <th>IdEntidad</th>
