--- a/Views/Muestras/FormGraficaCampoYTipoMuestra.cshtml
+++ b/Views/Muestras/FormGraficaCampoYTipoMuestra.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Entidades.Models.ViewModels.TipoMuestraCampoVM
-<h3 class="mt-3">Gráfica por campo y tipo de muestra</h3>
+<h2 class="mt-3 text-primary">Gráfica por campo y tipo de muestra</h2>
 <div class="container mt-3">
     <div class="row justify-content-center">
         <div class="col-md-4">
