--- a/Views/Muestras/GraficaPorCampoYTipoMuestra.cshtml
+++ b/Views/Muestras/GraficaPorCampoYTipoMuestra.cshtml
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <h3 class="text-center">Gráfica por campo y tipo de muestra</h3>
+            <h2 class="text-primary">Gráfica por campo y tipo de muestra</h2>
             <div class="lead">
                 <div ><strong>Campo</strong>: @Model.Campo.Nombre </div>
                 <div ><strong>Tipo de muestra</strong>: @Model.TipoMuestra.Nombre </div>
