--- a/Views/TipoMuestra/Create.cshtml
+++ b/Views/TipoMuestra/Create.cshtml
@@ -7,7 +7,7 @@
 <br />
 
 <br />
-<h3 class="text-center">Crear Tipo de muestra</h3>
+<h2 class="text-primary">Crear Tipo de muestra</h2>
 
 <div class="container mt-3">
     <div class="row justify-content-center">
