--- a/Views/Campos/Create.cshtml
+++ b/Views/Campos/Create.cshtml
@@ -4,10 +4,8 @@
     ViewData["Title"] = "Crear Campo";
 }
 
-<br />
 
-<br />
-<h3 class="text-center">Crear neuvo campo</h3>
+<h2 class="text-primary">Crear nuevo campo</h2>
 
 <div class="container mt-3">
     <div class="row justify-content-center">
