--- a/Views/Campos/Edit.cshtml
+++ b/Views/Campos/Edit.cshtml
@@ -4,10 +4,8 @@
     ViewData["Title"] = "Editar Campo";
 }
 
-<br />
 
-<br />
-<h3 class="text-center">Editar campo</h3>
+<h2 class="text-primary">Editar campo</h2>
 <form method="post" asp-action="Edit">
     <div class="row px-2 offset-1 border">       
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
