--- a/Views/Entidades/Cargar.cshtml
+++ b/Views/Entidades/Cargar.cshtml
@@ -2,10 +2,8 @@
     ViewData["Title"] = "Cargar entidades";
 }
 
-<br />
 
-<br />
-<h3 class="text-center">Cargar Entidades</h3>
+<h2 class="text-primary">Cargar Entidades</h2>
 
 <div class="container mt-3">
     <div class="row justify-content-center">
