--- a/Views/Entidades/Ver.cshtml
+++ b/Views/Entidades/Ver.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<h1>Entidad @Model.Id</h1>
+<h2 class="text-primary">Entidad @Model.Id</h2>
 
 <h4>Datos de la entidad</h4>
 <table class="table table-hover">
