--- a/Views/Informes/GetMuestrasYValores.cshtml
+++ b/Views/Informes/GetMuestrasYValores.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="container mt-3">
         <form class="row">
-            <h3>Muestras y valores</h3>
+            <h2 class="text-primary">Muestras y valores</h2>
             <div class="col-3">
                 <label for="inputPassword2" class="visually-hidden">Password</label>
                 <select id="selectipoMuestra" class="form-select" aria-label="Default select example">
