--- a/Views/Informes/ListaEntidades.cshtml
+++ b/Views/Informes/ListaEntidades.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="container mt-3">
 
-        <h3>Lista de entidades</h3>
+        <h2 class="text-primary">Lista de entidades</h2>
 
         <table class="table table-striped table-bordered">
             <tr>
