--- a/Views/Muestras/Cargar.cshtml
+++ b/Views/Muestras/Cargar.cshtml
@@ -2,10 +2,8 @@
     ViewData["Title"] = "Cargar conjunto muestras";
 }
 
-<br />
 
-<br />
-<h3 class="text-center">Cargar conjunto muestras</h3>
+<h2 class="text-primary">Cargar conjunto muestras</h2>
 
 <div class="container mt-3">
     <div class="row justify-content-center">
