--- a/Views/Entidades/Ver.cshtml
+++ b/Views/Entidades/Ver.cshtml
@@ -5,23 +5,109 @@
 }
 
 
-<h2 class="text-primary">Entidad @Model.Id</h2>
+<h2 class="text-primary mt-3"> Datos de la entidad</h2>
 
-<h4>Datos de la entidad</h4>
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th>Variable</th>
-            <th>Valor</th>
-        </tr>
-    </thead>
+@section Scripts{
+    <script src="/js/evolucionMuestra.js">  </script>
+}
 
-    @foreach (var item in @Model.EntidadDetalleDto)
-    {
+<div class="container mt-3">
+    <div class="row">
+        <div class="col-4">
+            
+                <div class="card h-100 mt-1">
+                    <div class="card-body">
+                        <h5 class="card-title">Entidad</h5>
+                        <p class="card-text"> @Model.Id</p>
 
-        <tr>
-            <td>@item.Nombre</td>
-            <td>@item.Valor</td>
-        </tr>
-    }
-</table>
+                    </div>
+                </div>
+            
+        </div>
+        <div class="col-8">
+            <div class="row">
+                @foreach (var item in @Model.EntidadDetalleDto)
+                {
+                    <div class="col-2">
+                        <div class="card mt-1">
+                            <div class="card-body">
+                                <h5 class="card-title">@item.Nombre</h5>
+                                <p class="card-text">@item.Valor</p>
+
+                            </div>
+                        </div>
+                    </div>
+                }
+                <div class="col-2">
+                    <div class="card mt-1">
+                        <div class="card-body">
+                            <h5 class="card-title">Nombre</h5>
+                            <p class="card-text">Valor</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+</div>
+
+
+  
+
+<hr />
+<h2 class="text-primary">Evolución de la Entidad @Model.Id</h2>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-6">
+            <form>
+                <fieldset >
+                    <div class="mt-3">
+                    <label for="camposSelect" class="form-label">Seleccione el Campo</label>
+                    <select id="camposSelect" class="form-select">
+                        <option value="0">Seleccione un Campo</option>
+                        @foreach (var item in Model.CamposDto)
+                        {
+                            <option value="@item.Id">@item.Nombre</option>
+                        }
+
+                    </select>
+                    </div>
+                    <div class="mt-3">
+                        <label for="tipoMuestraSelect" class="form-label">Seleccione el Tipo de Muestra</label>
+                        <select id="tipoMuestraSelect" class="form-select">
+                            <option value="0">Seleccione un Tipo de muestra</option>
+                            @foreach (var item in Model.TiposMuestraDto)
+                            {
+                                <option value="@item.Id">@item.Nombre</option>
+                            }
+
+                        </select>
+                    </div>
+                    <div class="mt-3">
+                        <h3>Seleccione las varibles que queire visualizar</h3>
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckboxStretched">
+                                <label class="form-check-label stretched-link" for="firstCheckboxStretched">First checkbox</label>
+                            </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckboxStretched">
+                                <label class="form-check-label stretched-link" for="secondCheckboxStretched">Second checkbox</label>
+                            </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckboxStretched">
+                                <label class="form-check-label stretched-link" for="thirdCheckboxStretched">Third checkbox</label>
+                            </li>
+                        </ul>
+                    </div>
+                    <button type="submit" class="btn btn-primary mt-3">Submit</button>
+                </fieldset>
+            </form>
+        </div>
+    
+       
+    </div>
+
+</div>
