--- a/Views/Entidades/Ver.cshtml
+++ b/Views/Entidades/Ver.cshtml
@@ -116,3 +116,15 @@
     </div>
 
 </div>
+<!-- grafico-->
+<div class="col-6">
+
+    <div class="chart-container">
+        <canvas id="evolution-chart" width="100" height="300"></canvas>
+    </div>
+</div>
+
+<script>
+
+
+</script>
