--- a/Views/Entidades/Ver.cshtml
+++ b/Views/Entidades/Ver.cshtml
@@ -107,7 +107,7 @@
                         </div>
                       
                     </div>
-                    <button type="submit" class="btn btn-primary mt-3">Submit</button>
+                    <button type="button" id="btnEnviar" class="btn btn-primary mt-3">Submit</button>
                 </fieldset>
             </form>
         </div>
@@ -116,11 +116,17 @@
     </div>
 
 </div>
-<!-- grafico-->
-<div class="col-6">
+<!-- grafico,-->
 
-    <div class="chart-container">
-        <canvas id="evolution-chart" width="100" height="300"></canvas>
+
+<div class="container-fluid">
+    <div class="row full-width-row">
+        
+            <!-- Contenido de la fila que ocupa todo el ancho -->
+            <div class="chart-container">
+                <canvas id="evolution-chart" width="100%" height="400"></canvas>
+            </div>
+        
     </div>
 </div>
 
