agregamos el crud para valores referencia

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,7 +43,6 @@
                     <ul class="navbar-nav me-auto">
                         
                         <li class="nav-item">
-                            
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
@@ -51,6 +50,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="TipoMuestra" asp-action="Index">Tipos de muestra</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="ValoresReferencia" asp-action="Index">Valores de referencia</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About</a>
